--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
-    "axios": "^1.9.0"
+    "axios": "^1.9.0",
+    "install": "^0.13.0",
+    "npm": "^11.3.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/history": "^4.7.11"
