--- a/DeepSick/package.json
+++ b/DeepSick/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.12.8",
     "mongoose": "^8.2.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
