--- a/DeepSick/package.json
+++ b/DeepSick/package.json
@@ -18,12 +18,14 @@
     "dotenv": "^16.5.0",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
+    "konva": "^9.3.20",
     "libphonenumber-js": "^1.12.8",
     "mongoose": "^8.2.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-konva": "^19.0.3",
     "react-router-dom": "^7.5.2",
     "socket.io-client": "^4.8.1"
   },
