--- a/DeepSick/package.json
+++ b/DeepSick/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.0.0",
     "react-konva": "^19.0.3",
     "react-router-dom": "^7.5.2",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
