fix some routes bug

--- a/DeepSick/server/.env
+++ b/DeepSick/server/.env
@@ -1,4 +1,15 @@
+# 服务器配置
 PORT=5001
-MONGO_URI=mongodb://127.0.0.1:27017/deepsick
-UPLOAD_DIR=./uploads
-JWT_SECRET=your_super_secret_key
+NODE_ENV=development
+
+# 数据库配置
+MONGO_URI=mongodb://localhost:27017/memorial
+
+# JWT配置
+JWT_SECRET=your_very_long_and_secure_secret_key_at_least_32_chars
+
+# 跨域配置
+CORS_ORIGIN=http://localhost:5173
+
+# 文件上传配置
+UPLOAD_DIR=uploads
