--- a/DeepSick/package.json
+++ b/DeepSick/package.json
@@ -17,12 +17,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.3",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "konva": "^9.3.20",
     "libphonenumber-js": "^1.12.8",
     "mongoose": "^8.2.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "npm": "^11.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-konva": "^19.0.3",
@@ -32,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/history": "^4.7.11",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-router-dom": "^5.3.3",
