--- a/DeepSick/package.json
+++ b/DeepSick/package.json
@@ -12,6 +12,7 @@
     "dev:server": "nodemon server/index.js"
   },
   "dependencies": {
+    "@tiptap/core": "^2.12.0",
     "@tiptap/extension-color": "^2.12.0",
     "@tiptap/extension-text-style": "^2.12.0",
     "@tiptap/react": "^2.12.0",
