--- a/DeepSick/package.json
+++ b/DeepSick/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.3",
+    "framer-motion": "^12.11.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "konva": "^9.3.20",
