--- a/DeepSick/package.json
+++ b/DeepSick/package.json
@@ -59,5 +59,10 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
-  }
+  },
+  "description": "A comprehensive digital memorial platform that allows users to create, customize, and participate in virtual memorial spaces for honoring and remembering the deceased.",
+  "main": "create-funeral-room.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
