Revert to commit c8126418 using safe revert

--- a/DeepSick/server/.env
+++ b/DeepSick/server/.env
@@ -1,4 +1,17 @@
-MONGO_URI=mongodb+srv://HaoranLi:Lhr020817%40@deepsick.ntdqkny.mongodb.net/?retryWrites=true&w=majority&appName=DeepSick
-# 服务器配置
+# Server configuration
 PORT=5001
+NODE_ENV=development
+
+# Database configuration
+MONGO_URI=mongodb://localhost:27017/memorial
+
+# JWT configuration
 JWT_SECRET=your_very_long_and_secure_secret_key_at_least_32_chars
+
+# CORS configuration
+CORS_ORIGIN=http://localhost:5173
+
+# File upload configuration
+UPLOAD_DIR=uploads
+
+VITE_API_URL=http://localhost:5001/api
