--- a/DeepSick/package.json
+++ b/DeepSick/package.json
@@ -38,22 +38,22 @@
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "npm": "^11.3.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-easy-crop": "^5.4.1",
-    "react-konva": "^19.0.3",
-    "react-router-dom": "^7.5.2",
+    "react-konva": "^18.2.10",
+    "react-router-dom": "^6.22.3",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^15.0.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/history": "^4.7.11",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-jsx": "^2.2.9",
     "@vitejs/plugin-react": "^4.3.4",
@@ -73,5 +73,13 @@
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
     "vitest": "^1.4.0"
+  },
+  "resolutions": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "overrides": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
